@@ -1,15 +1,11 @@
 const PATCH_NOTES = 
+	'2022/02/22\n' +
+	'• Slash command support for macros replaces older shorthand command.\n' +
 	'2022/02/21\n' +
 	'• Slash command support for praise and shame.\n' +
 	'2022/02/19\n' +
 	'• Slash command support for generating memes.\n' +
 	'• Emoji report can be ordered by most recent or most popular.\n' +
-	'• Fixed bug that interfered with reactions to funny numbers.\n' +
-	'2022/02/18\n' +
-	'• Slash command support for rolling dice.\n' +
-	'• Slash command support for reporting and resolving bugs.\n' +
-	'• Slash command support for adding and receiving advice.\n' +
-	'• Slash command support for muting and unmuting bot.\n' +
-	'• Slash command support for tabooing and untabooing words.\n';
+	'• Fixed bug that interfered with reactions to funny numbers.\n';
 
 module.exports = { PATCH_NOTES };
