@@ -11,7 +11,6 @@ const blackjack = require('./blackjack.js');
 const events = require('./events.js');
 const mute = require('./mute.js');
 const meme = require('./meme.js');
-const shorthand = require('./shorthand.js');
 const default_ = require('./default.js');
 
 /**
@@ -35,7 +34,6 @@ const commandArray = [
 	events,
 	mute,
 	meme,
-	shorthand,
 	default_
 ];
 
