@@ -3,7 +3,6 @@ const loudly = require('./loudly.js');
 const channel = require('./channel.js');
 const mocking = require('./mocking.js');
 const uwu = require('./uwu.js');
-const replaceShorthands = require('./replaceShorthands');
 
 /**
 * Metacommands alter the way a command will be executed. They should be
@@ -13,16 +12,6 @@ const replaceShorthands = require('./replaceShorthands');
 * invoked, this function should update the state object to appropriately
 * alter the way the command will be executed and return true, otherwise
 * it should return false.
-*
-* replaceShorthands is a special metacommand that will always be executed
-* last. This will replace any shorthands in the message with their expanded
-* form. This metacommand needs to be evaluated last because of its secondary
-* function: if the shorthand is the entire text of the message, after
-* evauating any other metacommands, it will function as an echo command.
-* For example, if !foo is a shorthand for "foo bar", the command
-* @Bot loudly !foo
-* will cause the bot to print
-* "FOO BAR"
 */
 
 const metacommandArray = [
@@ -43,7 +32,6 @@ const run = (state) => {
 			}
 		}
 	}
-	replaceShorthands(state);
 	return state;
 }
 
