@@ -1,3 +1,5 @@
+2022/02/22
+• Slash command support for macros replaces older shorthand command.
 2022/02/21
 • Slash command support for praise and shame.
 2022/02/19
